--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-font": "~13.0.1",
-    "expo-linear-gradient": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
+    "openai": "^4.86.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
