--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
